# midi_touch_keyboard

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
case/: tk_case_3dprint.FCStd  tk_case_bottom.stl  tk_case_top.stl  touch_keyboard_case.FCStd  touch_keyboard_case_bottom.20240323-135019.FCBak  touch_keyboard_case_bottom.FCStd  touch_keyboard_case_top.FCStd  touch_keyboard_led_strip.FCStd  touch_keyboard_pcb.20240323-133621.FCBak  touch_keyboard_pcb.FCStd
kicad/: .gitignore  0_local.kicad_sym  fp-lib-table  millproject  millproject.drill  postprocess.py  sens_input.kicad_sch  sym-lib-table  touch_keyboard.kicad_pcb  touch_keyboard.kicad_prl  touch_keyboard.kicad_pro  touch_keyboard.kicad_sch
kicad/0_local.pretty/: Button.kicad_mod  DIN_5.kicad_mod  Potentiometer_Bourns_PTV09A-1_Single_Vertical.kicad_mod  RPi_Pico_SMD.kicad_mod  align_marker.kicad_mod  pbs-10-button-pbs-10-button.step  pbs-10-button.20240323-132633.FCBak  pbs-10-button.FCStd
src/: adc.rs  board.rs  button.rs  config.rs  lib.rs  main.rs  midi.rs  serial_midi.rs  touch_sensors.rs  usb_midi.rs  ws2812b.pio  ws2812b.rs
