[package]
name = "touch_keyboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[patch.crates-io]
embassy-rp = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-time-driver = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-time-queue-driver = { git = 'https://github.com/embassy-rs/embassy.git' }

[dependencies]
#embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "0708ce1", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
static_cell = "2.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fixed = "1.23.1"
fixed-macro = "1.2"
pio-proc = "0.2"
pio = "0.2.1"
